--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -81,18 +81,22 @@
    "source": [
     "### 1.1.3 특징과 패턴\n",
     "\n",
-    "**특징이란?**\n",
+    "**특징(feature)이란?**\n",
     "어떤 객체가 가지고 있는 객체 고유의 분별 가능한 측면(aspect), 질(quality) 혹은 특성(characteristic) (ex: 색깔과 같은 상징기호 또는 높이/넓이/무게와 같은 수치적인 값.)\n",
     "\n",
-    "**패턴이란?**\n",
-    "개별 객체의 특색(traits) 이나 특징(features)들의 집합\n",
+    "* **특징벡터(feature vector)** : 특징이 하나 이상의 수치 값을 가질 경우, D-차원의 열 벡터로 표현.\n",
+    "* **특징공간(feature space)** : 특징벡터가 정의되는 D-차원 공간.\n",
+    "* **분산플롯(scatter plot)** : 인식 대상이 되는 객체들을 특징공간에서 특징벡터가 형성하는 점으로 표현된 그림.\n",
+    "\n",
     "\n",
     "<img src=\"./images/features.png\" width=\"550\">\n",
     "\n",
     "\n",
-    "* 특징벡터(feature vector) : 특징이 하나 이상의 수치 값을 가질 경우, D-차원의 열 벡터로 표현.\n",
-    "* 특징공간(feature space) : 특징벡터가 정의되는 D-차원 공간.\n",
-    "* 분산플롯(scatter plot) : 인식 대상이 되는 객체들을 특징공간에서 특징벡터가 형성하는 점으로 표현된 그림.\n",
+    "**패턴이란?**\n",
+    "개별 객체의 특색(traits) 이나 **특징(features)들의 집합**\n",
+    "\n",
+    "분류작업에 사용될 **훈련 자료의 패턴**은 변수 쌍 **$(x,\\omega)$**로 주어지며, 여기에서 **$x$는 특징 벡터**를, **$\\omega$는 라벨**을 말한다.\n",
+    "\n",
     "\n",
     "**특징벡터의 선택**\n",
     "패턴인식 알고리즘의 결정과 더불어 인식률에 결정적인 영향을 미친다.\n",
@@ -131,7 +135,7 @@
    "source": [
     "**패턴인식 시스템 설계 5단계**\n",
     "\n",
-    "1 단계 : *8데이터 수집 단계** : 안정된 패턴인식 성능을 얻기 위해서 얼마나 많은 표본 데이터가 필요한 가를 결정하고 수집\n",
+    "1 단계 : **데이터 수집 단계** : 안정된 패턴인식 성능을 얻기 위해서 얼마나 많은 표본 데이터가 필요한 가를 결정하고 수집\n",
     "\n",
     "2 단계 : **특징 선택 단계** : 대상 패턴에 대한 충분한 사전지식을 통하여 최상의 분류를 위한 특징을 선택 (“garbage in, garbage out”)\n",
     "\n",
@@ -140,7 +144,7 @@
     "4 단계 : **학습 단계** : 수집된 데이터로 부터 선택된 모델을 학습을 통하여 자료를 표현하는 완전한 모델을 만드는 단계로서 감독/비감독/강화 학습 등이 있다.\\\n",
     "\n",
     "5 단계 : **인식평가 단계** : 훈련된 모델이 얼마나 잘 맞는지를 평가한다.\n",
-    "과도추정(overfitting) 또는 일반화(generalization)여부에 대한 평가. \n"
+    "과적합(overfitting) 또는 일반화(generalization)여부에 대한 평가. \n"
    ]
   },
   {
