--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -218,20 +218,12 @@
     "**일반화 문제**\n",
     "\n",
     "* 우리의 선형분류기의 인식률이 95.7%로 설계사양은 충족하지만 신경망 알고리즘을 이용하면 성능개선 가능.\n",
-    "* 로지스틱스와 쌍곡선의 접선 활성 함수를 조합한 5개의 은닉 층을 가지고 학습한 Levenberg-Marquardt 알고리즘의 결과로 99.9975%라는 인상적인 인식률을 얻게 된다.\u000b",
-    "\n",
+    "* 로지스틱스와 쌍곡선의 접선 활성 함수를 조합한 5개의 은닉 층을 가지고 학습한 Levenberg-Marquardt 알고리즘의 결과로 99.9975%라는 인상적인 인식률을 얻게 된다.\n",
     "* 이러한 분류기에 만족한 우리는 자동 물고기 분류 시스템을 구축하여 실제 어류분류공장에 적용하였다.\n",
-    "* 그러나 며칠 후, 공장의 관리자에게서  전화가 왔다, 고기의 25%가 잘못 분류된다고. 무엇이 문제 일까?\n",
+    "* 그러나 며칠 후, 공장의 관리자에게서  전화가 왔다, 고기의 25%가 잘못 분류된다고. 무엇이 문제 일까? $\\Rightarrow$ 과적합 (Overfitting)\n",
     "\n",
     "<img src=\"images/decision_nl.png\" width=\"300\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
