--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -508,7 +508,7 @@
     " \\end{bmatrix}\n",
     " $$\n",
     "\n",
-    "**스칼라행렬** : 대각 성분이 모두 같고, 비대각 성분이 모두 0인 정방행렬\n",
+    "**스칼라행렬** : 대각 성분이 모두 같고, 비대각 성분이 모두 0인 정방행렬로, 다른 행렬에 곱하면, 그 효과가 스칼라를 곱한 것과 같아진다.\n",
     "$$ B = \n",
     " \\begin{bmatrix}\n",
     " 5 &0 &0 \\\\\n",
@@ -517,7 +517,7 @@
     " \\end{bmatrix}\n",
     " $$\n",
     "\n",
-    "**항등 행렬** 혹은 **단위 행렬 ( identity matrix )** : 대각 성분이 모두 1이고 그밖의 성분이 모두 0인 정방행렬\n",
+    "**항등 행렬** 혹은 **단위 행렬 ( identity matrix )** : 대각 성분이 모두 1 이고, 그 밖의 성분이 모두 0인 정방행렬\n",
     "$$ I = \n",
     " \\begin{bmatrix}\n",
     " 1 &0 &0 \\\\\n",
@@ -525,6 +525,8 @@
     " 0 & 0 &1 \n",
     " \\end{bmatrix}\n",
     " $$\n",
+    " \n",
+    " 단위행렬은 임의의 행렬의 왼쪽 또는 오른쪽에 곱해도, 그 행렬 값에 영향을 주지 않는다.\n",
     " \n",
     " $$ IA = AI = A $$\n",
     " $$AIB = AB = ABI $$"
@@ -542,6 +544,8 @@
     " 5 & 6 &3\n",
     " \\end{bmatrix}\n",
     " $$\n",
+    " \n",
+    " $$ S = S^T $$\n",
     "\n",
     "**영 행렬**: \n",
     "모든 구성 성분이 0인 행렬\n",
@@ -551,10 +555,10 @@
     "\n",
     "$$ \\mathbf{A}\\mathbf{A}^T = \n",
     " \\begin{bmatrix}\n",
-    "  (x_1,x_1) & 0 & \\cdots & 0 \\\\\n",
-    "  0 & (x_2, x_2)& \\cdots & 0 \\\\\n",
+    "  <\\mathbf{x_1,x_1}> & 0 & \\cdots & 0 \\\\\n",
+    "  0 & <\\mathbf{x_2, x_2}>& \\cdots & 0 \\\\\n",
     "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
-    "  0 & 0& \\cdots & (x_N, x_N)\n",
+    "  0 & 0& \\cdots & <\\mathbf{x_N, x_N}>\n",
     " \\end{bmatrix}\n",
     " $$\n",
     " \n",
@@ -562,18 +566,18 @@
     "\n",
     "$$ \\mathbf{A} = \n",
     " \\begin{bmatrix}\n",
-    "  a_{1,1} & a_{1,2} & \\cdots & a_{1,N} \\\\\n",
-    "  a_{2,1} & a_{2,2} & \\cdots & a_{2,N} \\\\\n",
+    "  a_{11} & a_{12} & \\cdots & a_{1N} \\\\\n",
+    "  a_{21} & a_{22} & \\cdots & a_{2N} \\\\\n",
     "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
-    "  a_{M,1} & a_{M,2} & \\cdots & a_{M,N} \n",
+    "  a_{M1} & a_{M2} & \\cdots & a_{MN} \n",
     " \\end{bmatrix}\n",
     "  \\Rightarrow\n",
     "\\mathbf{A}^T = \n",
     " \\begin{bmatrix}\n",
-    "  a_{1,1} & a_{2,1} & \\cdots & a_{M,1} \\\\\n",
-    "  a_{1.2} & a_{2,2} & \\cdots & a_{M,2} \\\\\n",
+    "  a_{11} & a_{21} & \\cdots & a_{M1} \\\\\n",
+    "  a_{12} & a_{22} & \\cdots & a_{M2} \\\\\n",
     "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
-    "  a_{1,N} & a_{2,N} & \\cdots & a_{M,N} \n",
+    "  a_{1N} & a_{2N} & \\cdots & a_{MN} \n",
     " \\end{bmatrix}\n",
     " $$"
    ]
@@ -607,12 +611,12 @@
     " \\end{bmatrix}\n",
     " $$\n",
     "where\n",
-    "$ c_{ij} = \\sum_{k=1}^D a_{ik}b_{kj} $"
+    "$ c_{ij} =  <\\mathbf{a_{1*},b_{*1}}>  = \\sum_{k=1}^D a_{ik}b_{kj} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +639,7 @@
     "B = np.array( [[1,1,1,1,1],[2,2,2,2,2],[3,3,3,3,3]] )\n",
     "print(A)\n",
     "print(B)\n",
-    "C = np.dot(A,B)\n",
+    "C = np.dot(A,B) # numpy에서 행렬곱셈은 dot()으로 수행한다.\n",
     "print(C)"
    ]
   },
@@ -655,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +674,7 @@
    ],
    "source": [
     "A = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
-    "A_tr = np.trace(A)\n",
+    "A_tr = np.trace(A)   # 1 + 5 + 9\n",
     "print(A, A_tr)"
    ]
   },
@@ -696,12 +700,12 @@
     "  a_{11} & a_{12} & a_{13} \\\\\n",
     "  a_{21} & a_{22} & a_{23} \\\\\n",
     "  a_{31} & a_{32} & a_{33} \\\\\n",
-    " \\end{matrix}\\right| = a_{11}a_{22}a_{33} + a_{13}a_{21}a_{32} - a_{13}a_{22}a_{31} - a_{11}a_{23}a_{32} - a_{12}a_{21}a_{33} $$"
+    " \\end{matrix}\\right| = a_{11}a_{22}a_{33} + a_{12}a_{23}a_{31} + a_{13}a_{21}a_{32} - a_{13}a_{22}a_{31} - a_{11}a_{23}a_{32} - a_{12}a_{21}a_{33} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +719,7 @@
    ],
    "source": [
     "A = np.array([[4,2],[1,3]])\n",
-    "A_det = np.linalg.det(A)\n",
+    "A_det = np.linalg.det(A)     #  (4x3) - (2x1)\n",
     "print(A, A_det)"
    ]
   },
@@ -728,17 +732,12 @@
     "역행렬의 성질\n",
     "* $\\mathbf{AA}^{-1}=\\mathbf{I}$,   $\\mathbf{A}^{-1}\\mathbf{A}=\\mathbf{I}$\n",
     "* $(\\mathbf{A}^{-1})^T = (\\mathbf{A}^T)^{-1}$\n",
-    "* $(\\mathbf{AB}^{-1})^T = \\mathbf{B}^{-1}\\mathbf{A}^{-1}$\n",
-    "\n",
-    "\n",
-    "**정부호 (positive-definite)** : 양의 실수(positive real number)와 유사한 성질을 갖는 행렬의 성질을 말하며, 만약, 모든 영이 아닌 $x$ 에 대하여 $\\mathbf{x}^T \\mathbf{Ax}> 0$ 의 조건을 만족한다면, 행렬 $\\mathbf{A}$는 정부호 행렬 (positive-definite matrix)이라고 한다. $\\mathbf{A} > 0$ 은 $\\mathbf{A}$가 정부호임을 나타낸다.\n",
-    "\n",
-    "만약 $\\mathbf{x}^T \\mathbf{Ax} \\ge 0$ 라면, $\\mathbf{A}$는 반정부호(positive semidefinite)라고 한다. 공분산 행렬은 정부호 행렬의 대표적인 예이다."
+    "* $(\\mathbf{AB})^{-1} = \\mathbf{B}^{-1}\\mathbf{A}^{-1}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -774,11 +773,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**정부호 (positive-definite)** : 양의 실수(positive real number)와 유사한 성질을 갖는 행렬의 성질을 말하며, 만약, 모든 영이 아닌 $x$ 에 대하여 $\\mathbf{x}^T \\mathbf{Ax}> 0$ 의 조건을 만족한다면, 행렬 $\\mathbf{A}$는 정부호 행렬 (positive-definite matrix)이라고 한다. $\\mathbf{A} > 0$ 은 $\\mathbf{A}$가 정부호임을 나타낸다.\n",
+    "$$ A = \n",
+    " \\begin{bmatrix}\n",
+    " 3 &0 &0 \\\\\n",
+    " 0 &1 & 0 \\\\\n",
+    " 0 & 0 &2 \n",
+    " \\end{bmatrix}\n",
+    " $$\n",
+    " 만약, $\\mathbf{x^T} = [1, -3, 2] $ 라면\n",
+    " $$ \\mathbf{x^T} A  \\mathbf{x} = \n",
+    " \\begin{bmatrix}\n",
+    " 1 &-3 &2 \\\\\n",
+    " \\end{bmatrix}\n",
+    " \\begin{bmatrix}\n",
+    " 3 &0 &0 \\\\\n",
+    " 0 &1 & 0 \\\\\n",
+    " 0 & 0 &2 \n",
+    " \\end{bmatrix}\n",
+    " \\begin{bmatrix}\n",
+    " 1 \\\\\n",
+    " -3 \\\\\n",
+    " 2 \n",
+    " \\end{bmatrix}\n",
+    " = 3 + 9 + 8 = 20 > 0\n",
+    " $$\n",
+    "\n",
+    "만약 $\\mathbf{x}^T \\mathbf{Ax} \\ge 0$ 라면, $\\mathbf{A}$는 반정부호(positive semidefinite)라고 한다. **공분산 행렬은 정부호 행렬의 대표적인 예이다**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 고유치와 고유벡터\n",
     "\n",
-    "고유치와 고유벡터 행렬 $\\mathbf{A}$가 $n\\times n$의 정방행렬이고, $\\mathbf{x}\\ne 0$ 인 벡터 $\\mathbf{x} \\in R^n$ 가 존재할 때, 다음 관계를 만족하는 스칼라 $\\lambda$를 행렬 $\\mathbf{A}$의 고유치 (eigenvalue)라 하고 벡터 $\\mathbf{x}$ 는 $\\lambda$에 대응하는 $\\mathbf{A}$의 고유벡터 (eigenvector)라고 한다.\n",
+    "고유치와 고유벡터 행렬 $\\mathbf{A}$가 $N\\times N$의 정방행렬이고, $\\mathbf{x}\\ne 0$ 인 벡터 $\\mathbf{x} \\in R^N$ 가 존재할 때, 다음 관계를 만족하는 스칼라 $\\lambda$를 행렬 $\\mathbf{A}$의 **고유치(eigenvalue)**라 하고 벡터 $\\mathbf{x}$ 는 $\\lambda$에 대응하는 $\\mathbf{A}$의 **고유벡터(eigenvector)**라고 한다.\n",
     "\n",
-    "$$ \\mathbf{Ax} = \\lambda \\mathbf{x}$$"
+    "$$ \\mathbf{Ax} = \\lambda \\mathbf{x}$$\n",
+    "\n",
+    "예를 들어,\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    " 2 &3 \\\\\n",
+    " 2 &1 \n",
+    " \\end{bmatrix}\n",
+    " \\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "2\n",
+    " \\end{bmatrix}\n",
+    " =  \\begin{bmatrix}\n",
+    "12 \\\\\n",
+    "8\n",
+    " \\end{bmatrix}\n",
+    " = \n",
+    " 4 \\times\n",
+    "  \\begin{bmatrix}\n",
+    "3\\\\\n",
+    "2\n",
+    " \\end{bmatrix}\n",
+    " $$"
    ]
   },
   {
@@ -799,46 +853,49 @@
     "|\\mathbf{A} - \\lambda \\mathbf{I} |= 0 \\Rightarrow \n",
     "\\lambda^N + a_1 \\lambda^{N-1} + \\cdots + a_{N-1} \\lambda + a_N = 0 $$\n",
     "\n",
-    "$\\mathbf{A}$ 를 $n\\times n$ 행렬이라 하고, $\\lambda$을 $\\mathbf{A}$의 고유값이라고 한다. $\\lambda$ 에 대응하는 모든 고유 벡터의 집합은 영벡터와 함께 $R^n$ 의 부분공간을 이룬다. 이 부분 공간을 $\\mathbf{A}$의 고유공간(eigenspace)이라고 한다.\n",
+    "$\\mathbf{A}$ 를 $N\\times N$ 행렬이라 하고, $\\lambda$을 $\\mathbf{A}$의 **고유값**이라고 한다. $\\lambda$ 에 대응하는 모든 **고유 벡터**의 집합은 영벡터와 함께 $R^N$ 의 부분공간을 이룬다. 이 부분 공간을 $\\mathbf{A}$의 **고유공간(eigenspace)**이라고 한다.\n",
     "\n",
     "\n",
     "\n",
     "**고유치와 고유벡터의 성질**\n",
     "\n",
-    "* 대각행렬의 고유치는 대각 성분 값이다.\n",
-    "* 삼각행렬의 고유치는 이 행렬 대각 성분 값이다.\n",
+    "* **대각행렬**의 고유치는 대각 성분 값이다.\n",
+    "* **삼각행렬**의 고유치는 이 행렬 대각 성분 값이다.\n",
     "* 벡터 $\\mathbf{x}$ 가 행렬 $\\mathbf{A}$의 고유 벡터이면 벡터 $\\mathbf{x}$의 스칼라 곱인 $k\\mathbf{x}$도 고유 벡터이다.\n",
-    "* 전치하여도 고유치는 변하지 않는다. 즉, 행렬 $\\mathbf{A}$의 고유치와 전치행렬 $\\mathbf{A}^T$의 고유치는\n",
+    "* **전치**하여도 고유치는 변하지 않는다. 즉, 행렬 $\\mathbf{A}$의 고유치와 전치행렬 $\\mathbf{A}^T$의 고유치는\n",
     "동일하다.\n",
-    "* 역행렬의 고유치는 원래 행렬의 고유치의 역수가 된다.\n",
-    "* 행렬 $\\mathbf{A}$의 모든 고유치의 곱은 $\\mathbf{A}$의 행렬식과 같다.\n",
+    "* **역행렬**의 고유치는 원래 행렬의 고유치의 역수가 된다.\n",
+    "* 행렬 $\\mathbf{A}$의 **모든 고유치의 곱**은 $\\mathbf{A}$의 행렬식과 같다.\n",
     "* 서로 다른 고유치와 관련된 고유 벡터는 선형독립이다.\n",
-    "* 실수 대칭 행렬의 고유 벡터는 서로 직교한다.\n",
-    "* 실수 대칭 행렬의 고유치 또한 실수이다.\n",
+    "* **실수 대칭 행렬**의 고유 벡터는 서로 직교한다.\n",
+    "* **실수 대칭 행렬**의 고유치 또한 실수이다.\n",
     "* 만약 $\\mathbf{A}$가 양의 정부호 행렬이라면 모든 고유치는 양수이다.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 14.639 -1.639 -0.000]\n",
+      "eigenvalue of A [ 14.639 -1.639 -0.000]\n",
       "[[ 0.255  0.789  0.408]\n",
       " [ 0.502 -0.493 -0.816]\n",
       " [ 0.826 -0.366  0.408]]\n",
-      "[ 14.639 -1.639 -0.000]\n",
+      "========================================\n",
+      "eigenvalue of A^T [ 14.639 -1.639  0.000]\n",
       "[[ 0.611  0.880 -0.239]\n",
       " [ 0.577  0.233 -0.796]\n",
       " [ 0.542 -0.414  0.557]]\n",
+      "========================================\n",
       "[ 1.000  2.000  3.000]\n",
       "[[ 1.000  0.000  0.000]\n",
       " [ 0.000  1.000  0.000]\n",
       " [ 0.000  0.000  1.000]]\n",
+      "========================================\n",
       "[ 1.000  0.500  0.333]\n",
       "[[ 1.000  0.000  0.000]\n",
       " [ 0.000  1.000  0.000]\n",
@@ -849,17 +906,23 @@
    "source": [
     "A = np.array([[1,2,3], [6,5,4], [9,8,7]])\n",
     "W, V = np.linalg.eig(A)\n",
-    "print(W)\n",
-    "print(V)\n",
+    "print('eigenvalue of A',W)  # 고유값으로 구성된 벡터\n",
+    "print(V)  # 고유벡터로 구성된 행렬\n",
+    "print('=='*20)\n",
+    "\n",
     "W, V = np.linalg.eig(np.transpose(A))\n",
-    "print(W)\n",
+    "print('eigenvalue of A^T',W)  # 전치된 행렬의 고유값은 이전의 행렬의 고유값과 같다.\n",
     "print(V)\n",
+    "print('=='*20)\n",
+    "\n",
     "A = np.array([[1,0,0], [0,2,0], [0,0,3]])\n",
     "W, V = np.linalg.eig(A)\n",
-    "print(W)\n",
+    "print(W)  # 대각행렬의 고유값은 대각성분\n",
     "print(V)\n",
+    "print('=='*20)\n",
+    "\n",
     "W, V = np.linalg.eig(np.linalg.inv(A))\n",
-    "print(W)\n",
+    "print(W) # 역행렬의 고유값은 원래 행렬의 고유값의 역수\n",
     "print(V)"
    ]
   },
@@ -869,7 +932,7 @@
    "source": [
     "## 2.3 선형변환\n",
     "\n",
-    "선형 변환이란 벡터공간 $\\mathbf{X}^N$ 으로부터 벡터공간  $\\mathbf{Y}^N$ 상으로 매핑하는 것을 말하며, 행렬로는 다음과 같이 표현된다. 벡터 $ \\mathbf{s} \\in  \\mathbf{X}^N$가 주어질 때,  $\\mathbf{Y}^N$ 상에 대응되는 벡터  $\\mathbf{y}$ 는 다음과 같이 계산된다.\n",
+    "선형 변환이란 벡터공간 $R^N$ 으로부터 벡터공간  $R^M$ 상으로 매핑하는 것을 말하며, 행렬로는 다음과 같이 표현된다. 벡터 $ \\mathbf{x} \\in R^N$가 주어질 때,  $R^M$ 상에 대응되는 벡터  $\\mathbf{y}$ 는 다음과 같이 계산된다.\n",
     "\n",
     "$$ \n",
     "\\begin{bmatrix}\n",
@@ -894,14 +957,16 @@
     " \\end{bmatrix}\n",
     " $$\n",
     "\n",
-    "선형 변환이 이루어지는 두 벡터 공간의 차원을 같을 필요는 없다. 패턴인식에서는 선형변환을 통하여 특징벡터의 차원을 축소하는데 이용한다. 선형변환 행렬이 정방 행렬 $\\mathbf{A}$이고 $\\mathbf{AA}^T = \\mathbf{A}^T\\mathbf{A} = \\mathbf{I}$ 일 때, 정규직교 한다고 말한다. 정규직교이면 $\\mathbf{A}^T = \\mathbf{A}^{-1}$ 이다. 특히 정규직교 변환하게 되면 아래와 같이 벡터의 크기를 보존하는 성질을 가짐을 알 수 있다.\n",
+    "선형 변환이 이루어지는 두 벡터 공간의 차원을 같을 필요는 없다. 패턴인식에서는 선형변환을 통하여 **특징벡터의 차원을 축소하는데 이용**한다. \n",
+    "\n",
+    "선형변환 행렬이 정방 행렬 $\\mathbf{A}$이고 $\\mathbf{AA}^T = \\mathbf{A}^T\\mathbf{A} = \\mathbf{I}$ 일 때, 정규직교 한다고 말한다. 정규직교이면 $\\mathbf{A}^T = \\mathbf{A}^{-1}$ 이다. 특히 정규직교 변환하게 되면 아래와 같이 벡터의 크기를 보존하는 성질을 가짐을 알 수 있다.\n",
     "\n",
     "$$ |\\mathbf{y}| = \\sqrt{\\mathbf{y}^T\\mathbf{y}} = \n",
     "\\sqrt{(\\mathbf{Ax})^T (\\mathbf{Ax}) } = \n",
-    "\\sqrt{ (\\mathbf{x}^T \\mathbf{A}^T) (\\mathbf{Ax})} =\n",
+    "\\sqrt{ \\mathbf{x}^T \\mathbf{A}^T \\mathbf{Ax}} =\n",
     "\\sqrt{ \\mathbf{x}^T\\mathbf{x} } = |\\mathbf{x}| $$\n",
     "\n",
-    "이때, 정규직교 변환의 행 벡터 $(a_1,a_2, \\cdots,a_N)$는 정규직교 기저벡터집합을 형성한다.\n",
+    "이때, 정규직교 변환의 행 벡터들 $(\\mathbf{a_1,a_2, \\cdots,a_N})$는 정규직교 기저벡터집합을 형성한다.\n",
     "\n",
     "$$ \\mathbf{y}_{M\\times 1} = \n",
     "\\begin{bmatrix}\n",
@@ -928,7 +993,8 @@
    "source": [
     "주어진 행렬 A가 선형 변환이라면, 고유벡터(eigenvector)는 벡터공간에서의 불변 (invariant) 방향을 나타낸다.\n",
     "\n",
-    "A에 의한 변환 시에, 고유벡터(eigenvector) v 로 정의되는 방향에 놓인 어떤 점들도 그대로 그 방향으로 놓이게 되며, 그 크기는 해당하는 고유치(eigenvalue) 로 곱해지게 된다.\n",
+    "A에 의한 변환 시에, 고유벡터(eigenvector) $\\mathbf{v}$\n",
+    "로 정의되는 방향에 놓인 어떤 점들도 그대로 그 방향으로 놓이게 되며, 그 크기는 해당하는 고유치(eigenvalue) 로 곱해지게 된다.\n",
     "<img src=\"images/eigenvector.png\" width=\"250\">\n",
     "\n",
     "예를 들어, Z 축에 대하여 3차원 벡터를 회전하는 변환 A는 벡터 $[0, 0, 1]$을 유일한 고유 벡터로 갖게 되며 해당하는 고유치는 1이 된다.\n",
@@ -952,15 +1018,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A =  [1 2 3 4]\n",
       "norm of A =  5.477225575051661\n",
-      " 3 x B =  [ 3  6  9 12]\n",
+      "3 x A =  [ 3  6  9 12]\n",
       "inner product of A & B =  90\n",
       "outer product of A & B = \n",
       " [[ 3  6  9 12]\n",
@@ -977,9 +1044,11 @@
     "\n",
     "A = np.array([1, 2, 3, 4])\n",
     "A_norm = np.linalg.norm(A)\n",
+    "print(\"A = \", A)\n",
     "print(\"norm of A = \", A_norm)\n",
     "B = 3*A\n",
-    "print(\" 3 x B = \", B)\n",
+    "print(\"3 x A = \", B)\n",
+    "\n",
     "C = np.dot(A,B)\n",
     "print(\"inner product of A & B = \", C)\n",
     "D = np.outer(A, B)\n",
