--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -995,7 +995,7 @@
     "\n",
     "A에 의한 변환 시에, 고유벡터(eigenvector) $\\mathbf{v}$\n",
     "로 정의되는 방향에 놓인 어떤 점들도 그대로 그 방향으로 놓이게 되며, 그 크기는 해당하는 고유치(eigenvalue) 로 곱해지게 된다.\n",
-    "<img src=\"images/eigenvector.png\" width=\"250\">\n",
+    "<img src=\"images/Eigenvector.png\" width=\"250\">\n",
     "\n",
     "예를 들어, Z 축에 대하여 3차원 벡터를 회전하는 변환 A는 벡터 $[0, 0, 1]$을 유일한 고유 벡터로 갖게 되며 해당하는 고유치는 1이 된다.\n",
     "$$ A = \n",
