--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
    "source": [
     "**수직사영 (orthogonal projection)** : 벡터 **y**를 벡터 **x**로 사영(혹은 투영)을 취하면, 벡터 **x** 의 방향으로 어떠한 길이를 가지는 벡터가 만들어진다. 이 사영 벡터는 내적의 정의를 사용하여 다음과 같이 정의하는데, 여기서, $\\mathbf{u_x}$ 는 **x** 와 같은 방향의 단위 벡터이다.\n",
     "\n",
-    "$$ \\langle \\mathbf{y}^T,\\mathbf{u_x} \\rangle \\mathbf{u_x} = ( \\|\\mathbf{y}\\| \\cos \\theta )\\mathbf{u_x}$$\n",
+    "$$ \\langle \\mathbf{y},\\mathbf{u_x} \\rangle \\mathbf{u_x} = ( \\|\\mathbf{y}\\| \\cos \\theta )\\mathbf{u_x}$$\n",
     "\n",
     "<img src=\"./images/orthogonal.png\"  width=\"200\" title=\"orthogonal\">\n",
     "\n",
@@ -263,7 +263,7 @@
     "\\end{matrix}\n",
     "\\right]$\n",
     "\n",
-    "$ \\langle \\mathbf{y}^T,\\mathbf{u_x} \\rangle \\mathbf{u_x} = ([ 2, 4 ] \n",
+    "$ \\langle \\mathbf{y},\\mathbf{u_x} \\rangle \\mathbf{u_x} = ([ 2, 4 ] \n",
     "\\left[\n",
     "\\begin{matrix}\n",
     "4/5\\\\ 3/5\n",
@@ -293,6 +293,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.2, 2.4])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array([2, 4])\n",
+    "x = np.array([4, 3])\n",
+    "u_x = x / np.linalg.norm(x)\n",
+    "y_x = np.dot(y,u_x) * u_x\n",
+    "print(y_x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,6 +325,7 @@
     "벡터집합 $x=\\{x_1, x_2, ..., x_N\\}$ 와 스칼라 계수집합 $\\{a_1, a_2,...,a_N\\}$ 과의 곱의 합으로 표현된 벡터 $\\mathbf{y}$를 벡터 $\\mathbf{x}$의 “선형결합(linear combination)”이라고 한다.\n",
     "\n",
     "$$ \\mathbf{y} = a_1 \\mathbf{x_1} +a_2 \\mathbf{x_2} + \\cdots +a_N \\mathbf{x_N} $$\n",
+    "\n",
     "\n",
     "$$ \\left[\n",
     "\\begin{matrix}\n",
@@ -320,6 +345,27 @@
     "0\\\\2\\\\1\n",
     "\\end{matrix}\n",
     "\\right] $$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([1,2,3])\n",
+    "x2 = np.array([0,3,1])\n",
+    "x3 = np.array([0,2,1])\n",
+    "y = 2*x1 + 1*x2 - 2*x3\n",
+    "print(y)"
    ]
   },
   {
@@ -352,6 +398,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([2,2,4])\n",
+    "x2 = np.array([2,2,3])\n",
+    "x3 = np.array([1,1,1])\n",
+    "y = 1*x1 - 2*x2 + 2*x3\n",
+    "print(y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,11 +448,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0]\n",
+      "[0 3 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([1,0,0])\n",
+    "x2 = np.array([0,1,0])\n",
+    "x3 = np.array([0,0,1])\n",
+    "y = 0*x1 + 0*x2 + 0*x3\n",
+    "print(y)\n",
+    "y2 = 0*x1 + 3*x2 + 0*x3\n",
+    "print(y2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 기저집합\n",
-    "행렬 Nx1로 표현되는 모든 벡터를 표현할 수 있는 벡터의 집합을 “기저 벡터 집합”이라고 한다. 이때 임의의 벡터는 기저 벡터 집합을 통하여 Nx1 벡터 공간에 펼쳐(span)진다고 표현한다. 만약, 이 기저 집합이라면, 임의의 Nx1벡터 x는 다음과 같이 표현될 수 있다.\n",
+    "행렬 Nx1로 표현되는 모든 벡터를 표현할 수 있는 벡터의 집합을 “**기저벡터 집합**”이라고 한다. 이때 임의의 벡터는 기저 벡터 집합을 통하여 Nx1 벡터 공간에 펼쳐(span)진다고 표현한다. 만약, $\\{\\mathbf{v_i} \\}_{1\\le i \\le N}$ 이 기저 집합이라면, 임의의 Nx1벡터 x는 다음과 같이 표현될 수 있다.\n",
     "\n",
     "$$  \\mathbf{x} = \\sum_{i=1}^N c_i \\mathbf{v_i} $$\n",
     "\n",
@@ -408,19 +499,19 @@
     "\\end{matrix}\n",
     "\\right] $$\n",
     "\n",
-    "만약, 어떤 임의의 벡터 x가 {ui} 의 선형조합으로 표현이 되어질 수 있다면, 벡터집합 $\\{u_1, u_2,...,u_N\\}$ 은 벡터 공간에 대하여 기저(basis)를 형성한다고 말한다.\n",
+    "만약, 어떤 임의의 벡터 $\\mathbf{a}$가 $\\{u_i\\}$ 의 선형조합으로 표현이 되어질 수 있다면, 벡터집합 $\\{u_1, u_2,...,u_N\\}$ 은 벡터 공간에 대하여 기저(basis)를 형성한다고 말한다.\n",
     "\n",
-    "$$  \\mathbf{x} = a_1 \\mathbf{u_1} +a_2 \\mathbf{u_2} + \\cdots +a_N \\mathbf{u_N}$$\n",
+    "$$  \\mathbf{a} = a_1 \\mathbf{u_1} +a_2 \\mathbf{u_2} + \\cdots +a_N \\mathbf{u_N}$$\n",
     "\n",
-    "계수  $\\{a_1, a_2,...,a_N\\}$를 기저 ${u_i}$ 에 따른 벡터 $\\mathbf{x}$의 성분이라고 하고, 기저를 형성하기 위해서 ${u_i}$ 벡터들이 선형 독립인 것은 필요 충분한 조건이다.\n",
+    "계수  $\\{a_1, a_2,...,a_N\\}$를 기저 ${u_i}$ 에 따른 벡터 $\\mathbf{a}$의 성분이라고 하고, 기저를 형성하기 위해서 ${u_i}$ 벡터들이 선형 독립인 것은 필요 충분한 조건이다.\n",
     "\n",
-    "직교(orthogonal) : $$  \\mathbf{u_1}^T \\mathbf{u_j} \n",
+    "**직교(orthogonal)** : $$  \\mathbf{u_i}^T \\mathbf{u_j} \n",
     "  \\begin{cases}\n",
     "   \\neq 0 & \\quad i = j \\\\\n",
     "     =  0 & \\quad i \\neq j\n",
     "  \\end{cases}\n",
     "$$\n",
-    "정규직교(orthonormal) : $$  \\mathbf{u_1}^T \\mathbf{u_j} \n",
+    "**정규직교(orthonormal)** : $$  \\mathbf{u_i}^T \\mathbf{u_j} \n",
     "  \\begin{cases}\n",
     "   = 1 & \\quad i = j \\\\\n",
     "     =  0 & \\quad i \\neq j\n",
@@ -436,7 +527,7 @@
     "\n",
     "* 모든 n차원 벡터들이 존재하는 n차원 공간을 “벡터 공간”이라고 한다.\n",
     "* 벡터 공간은 실수에 의하여 벡터 덧셈과 벡터 곱셈에 대한 규칙에 닫혀있는 벡터 집합이다. 그러므로 임의의 두 벡터에 대한 덧셈과 곱셈을 통하여 해당 공간 내에 있는 새로운 벡터를 생성할 수 있다.\n",
-    "* n차원 공간 Rn 은 모두 선형독립인 n개의 n차원 벡터에 의해 생성될 수 있는데, 이때 n차원 공간 Rn 을“유클리드 n차원 공간”혹은“유클리드 공간”이라고 한다.\n",
+    "* n차원 공간 $R_n$ 은 모두 선형독립인 n개의 n차원 벡터에 의해 생성될 수 있는데, 이때 n차원 공간 $R_n$ 을 “유클리드 n차원 공간” 혹은 “유클리드 공간”이라고 한다.\n",
     "\n",
     "벡터간의 거리 : 벡터공간에 존재하는 두 점 사이의 거리(유클리디안 거리)는 두 점이 잊는 벡터의 길이로 다음과 같이 정의 된다.\n",
     "\n",
@@ -616,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -874,32 +965,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eigenvalue of A [ 14.639 -1.639 -0.000]\n",
-      "[[ 0.255  0.789  0.408]\n",
-      " [ 0.502 -0.493 -0.816]\n",
-      " [ 0.826 -0.366  0.408]]\n",
+      "eigenvalue of A [ 1.46394103e+01 -1.63941030e+00 -7.02147851e-17]\n",
+      "[[ 0.25535621  0.78939255  0.40824829]\n",
+      " [ 0.50186707 -0.49293747 -0.81649658]\n",
+      " [ 0.82639134 -0.36588529  0.40824829]]\n",
       "========================================\n",
-      "eigenvalue of A^T [ 14.639 -1.639  0.000]\n",
-      "[[ 0.611  0.880 -0.239]\n",
-      " [ 0.577  0.233 -0.796]\n",
-      " [ 0.542 -0.414  0.557]]\n",
+      "eigenvalue of A^T [ 1.46394103e+01 -1.63941030e+00 -2.30767702e-16]\n",
+      "[[ 0.61131249  0.88007854 -0.23866719]\n",
+      " [ 0.57665643  0.23324244 -0.79555728]\n",
+      " [ 0.54200037 -0.41359367  0.5568901 ]]\n",
       "========================================\n",
-      "[ 1.000  2.000  3.000]\n",
-      "[[ 1.000  0.000  0.000]\n",
-      " [ 0.000  1.000  0.000]\n",
-      " [ 0.000  0.000  1.000]]\n",
+      "[1. 2. 3.]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
       "========================================\n",
-      "[ 1.000  0.500  0.333]\n",
-      "[[ 1.000  0.000  0.000]\n",
-      " [ 0.000  1.000  0.000]\n",
-      " [ 0.000  0.000  1.000]]\n"
+      "[1.         0.5        0.33333333]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
      ]
     }
    ],
@@ -993,9 +1084,8 @@
    "source": [
     "주어진 행렬 A가 선형 변환이라면, 고유벡터(eigenvector)는 벡터공간에서의 불변 (invariant) 방향을 나타낸다.\n",
     "\n",
-    "A에 의한 변환 시에, 고유벡터(eigenvector) $\\mathbf{v}$\n",
-    "로 정의되는 방향에 놓인 어떤 점들도 그대로 그 방향으로 놓이게 되며, 그 크기는 해당하는 고유치(eigenvalue) 로 곱해지게 된다.\n",
-    "<img src=\"images/Eigenvector.png\" width=\"250\">\n",
+    "A에 의한 변환 시에, 고유벡터(eigenvector) v 로 정의되는 방향에 놓인 어떤 점들도 그대로 그 방향으로 놓이게 되며, 그 크기는 해당하는 고유치(eigenvalue) 로 곱해지게 된다.\n",
+    "<img src=\"images/eigenvector.png\" width=\"250\">\n",
     "\n",
     "예를 들어, Z 축에 대하여 3차원 벡터를 회전하는 변환 A는 벡터 $[0, 0, 1]$을 유일한 고유 벡터로 갖게 되며 해당하는 고유치는 1이 된다.\n",
     "$$ A = \n",
@@ -1018,16 +1108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A =  [1 2 3 4]\n",
       "norm of A =  5.477225575051661\n",
-      "3 x A =  [ 3  6  9 12]\n",
+      " 3 x B =  [ 3  6  9 12]\n",
       "inner product of A & B =  90\n",
       "outer product of A & B = \n",
       " [[ 3  6  9 12]\n",
@@ -1044,11 +1133,9 @@
     "\n",
     "A = np.array([1, 2, 3, 4])\n",
     "A_norm = np.linalg.norm(A)\n",
-    "print(\"A = \", A)\n",
     "print(\"norm of A = \", A_norm)\n",
     "B = 3*A\n",
-    "print(\"3 x A = \", B)\n",
-    "\n",
+    "print(\" 3 x B = \", B)\n",
     "C = np.dot(A,B)\n",
     "print(\"inner product of A & B = \", C)\n",
     "D = np.outer(A, B)\n",
@@ -1169,7 +1256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
