--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -678,31 +678,33 @@
    "metadata": {},
    "source": [
     "**행렬의 곱셈**\n",
+    "\n",
     "$$ \\mathbf{AB} = \n",
     " \\begin{bmatrix}\n",
     "  a_{11} & a_{12} & \\cdots & a_{1D} \\\\\n",
     "  a_{21} & a_{22} & \\cdots & a_{2D} \\\\\n",
-    "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+    "  \\vdots  & \\vdots  & \\ddots & \\vdots \\\\\n",
     "  a_{M1} & a_{M2} & \\cdots & a_{MD} \n",
     " \\end{bmatrix}\n",
     " \\begin{bmatrix}\n",
     "  b_{11} & b_{12} & \\cdots & b_{1N} \\\\\n",
     "  b_{21} & b_{22} & \\cdots & b_{2N} \\\\\n",
     "  b_{31} & b_{32} & \\cdots & b_{3N} \\\\\n",
-    "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+    "  \\vdots  & \\vdots  & \\ddots & \\vdots \\\\\n",
     "  b_{D1} & b_{D2} & \\cdots & b_{DN} \n",
-    " \\end{bmatrix}\n",
-    " = \n",
+    " \\end{bmatrix} = \n",
     " \\begin{bmatrix}\n",
     "  c_{11} & c_{21} & \\cdots & c_{1N} \\\\\n",
     "  c_{21} & c_{22} & \\cdots & c_{2N} \\\\\n",
     "  c_{31} & c_{32} & \\cdots & c_{3N} \\\\\n",
-    "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+    "  \\vdots  & \\vdots  & \\ddots & \\vdots \\\\\n",
     "  c_{M1} & c_{M2} & \\cdots & c_{MN} \n",
     " \\end{bmatrix}\n",
     " $$\n",
+    " \n",
     "where\n",
-    "$ c_{ij} =  <\\mathbf{a_{1*},b_{*1}}>  = \\sum_{k=1}^D a_{ik}b_{kj} $"
+    "\n",
+    "$ c_{ij} =  < \\mathbf{a_{1*},b_{*1}} >  = \\sum_{k=1}^D a_{ik}b_{kj} $"
    ]
   },
   {
@@ -1256,7 +1258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
