--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -782,7 +782,7 @@
     "\n",
     "* 행렬식은 오직 정방 행렬에서만 정의된다.\n",
     "* 행렬식의 값은 하나의 상수 즉, 임의의 실수이다.\n",
-    "* $n$차의 행렬식 $|\\mathbf{A}_{n×n}|$은 n개의 행과 열의 위치가 서로 다른 성분들의 곱의 합으로 표현된다.\n",
+    "* $n$차의 행렬식 $\\left| \\mathbf{A}_{n×n} \\right|$은 n개의 행과 열의 위치가 서로 다른 성분들의 곱의 합으로 표현된다.\n",
     "\n",
     "$$ |\\mathbf{A}| = \\left| \\begin{matrix}\n",
     "  a_{11} & a_{12}  \\\\\n",
@@ -914,12 +914,10 @@
     " \\begin{bmatrix}\n",
     "3 \\\\\n",
     "2\n",
-    " \\end{bmatrix}\n",
-    " =  \\begin{bmatrix}\n",
+    " \\end{bmatrix} =  \\begin{bmatrix}\n",
     "12 \\\\\n",
     "8\n",
-    " \\end{bmatrix}\n",
-    " = \n",
+    " \\end{bmatrix} = \n",
     " 4 \\times\n",
     "  \\begin{bmatrix}\n",
     "3\\\\\n",
@@ -1098,7 +1096,7 @@
     " \\end{bmatrix}\n",
     " $$\n",
     "\n",
-    "<img src=\"images/rotation_z.png\" width=\"300\">"
+    "<img src=\"images/Rotation_z.png\" width=\"300\">"
    ]
   },
   {
