--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -782,7 +782,7 @@
     "\n",
     "* 행렬식은 오직 정방 행렬에서만 정의된다.\n",
     "* 행렬식의 값은 하나의 상수 즉, 임의의 실수이다.\n",
-    "* $n$차의 행렬식 $\\left| \\mathbf{A}_{n×n} \\right|$은 n개의 행과 열의 위치가 서로 다른 성분들의 곱의 합으로 표현된다.\n",
+    "* $n$차의 행렬식 $\\left| \\mathbf{A}_{n\\×n} \\right|$은 n개의 행과 열의 위치가 서로 다른 성분들의 곱의 합으로 표현된다.\n",
     "\n",
     "$$ |\\mathbf{A}| = \\left| \\begin{matrix}\n",
     "  a_{11} & a_{12}  \\\\\n",
