--- a/3. Statistics & Probability.ipynb
+++ b/3. Statistics & Probability.ipynb
@@ -18,7 +18,7 @@
     "* **표본 (sample)** : 모집단의 특성을 파악하기 위해서 수집된 모집단의 일 부분인 개별 자료, 모집단으로부터 임의로 추출된 **모집단의 부분집합**\n",
     "* **표본 분포 (sampling distribution)** : 동일한 모집단으로부터 취해진 동일한 크기의 모든 가능한 **표본으로부터 얻어진 통계값들의 분포**\n",
     "\n",
-    "<img src=\"images/population.png\" width=\"350\" align=\"left\">\n",
+    "<img src=\"images/population.PNG\" width=\"350\">\n",
     "<img src=\"images/sample_distribution.gif\" width=\"450\">"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**분산 (variance)** : 자료로부터 평균값의 차이에 대한 제곱 값의 평균을 분산이라고 하는데, **자료의 흩어진 정도**를 나타낸다. (때때로 편향되지 않은 (unbiased) 분산으로 n 대신에 n-1 로 나눈 것이 사용되기도 한다. 본 강의에서는 편의상 편향된(biased) 분산을 사용한다.)\n",
+    "**분산 (variance)** : 자료로부터 평균값의 차이에 대한 제곱 값의 평균을 분산이라고 하는데, **자료의 흩어진 정도**를 나타낸다. (때때로 비편향(unbiased) 분산으로 n 대신에 n-1 로 나눈 것이 사용되기도 한다. 본 강의에서는 편의상 편향된(biased) 분산을 사용한다.)\n",
     "\n",
     "$$ s^2 = \\sum_{i=1}^{n} { (x_i - \\bar{x})^2 \\over n} $$\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**표준 편차 (standard deviation)** : 분산은 자료의 단위와 달라지므로 분산의 제곱근을 취하여 **자료의 단위와 일치**시킨 것을 표준 편차라고 한다.(때때로 편향되지 않은 (unbiased) 표준편차로 n 대신에 n-1 로 나눈 것이 사용되기도 한다. 본 강의에서는 편의상 편향된(biased) 표준편차를 사용한다.)\n",
+    "**표준 편차 (standard deviation)** : 분산은 자료의 단위와 달라지므로 분산의 제곱근을 취하여 **자료의 단위와 일치**시킨 것을 표준 편차라고 한다.(때때로 비편향(unbiased) 표준편차로 n 대신에 n-1 로 나눈 것이 사용되기도 한다. 본 강의에서는 편의상 편향된(biased) 표준편차를 사용한다.)\n",
     "\n",
     "$$ s = \\sqrt{s^2} =  \\sqrt{\\sum_{i=1}^{n} { (x_i - \\bar{x})^2\\over n}} $$\n",
     "\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,22 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "covariance of x_1 and x_2 is :  -2.0\n",
-      "correlation coefficient of x_1 and x_2 is :  -1.3228756555322954\n"
+      "covariance of x_1 and x_2 is :  0.5714285714285714\n",
+      "correlation coefficient of x_1 and x_2 is :  0.37796447300922725\n"
      ]
     }
    ],
    "source": [
     "x1_diff = x_1 - x_1.mean()\n",
     "x2_diff = x_2 - x_2.mean()\n",
-    "x12_cov = np.mean(x_diff*y_diff)\n",
+    "x12_cov = np.mean(x1_diff*x2_diff)\n",
     "print(\"covariance of x_1 and x_2 is : \", x12_cov)\n",
     "print(\"correlation coefficient of x_1 and x_2 is : \", x12_cov/(x_1.std()*x_2.std()) )"
    ]
@@ -242,17 +242,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.0 9.0 4.0\n",
-      "150.0 6.0 13.1\n",
-      "14.0 -23.5 -8.8\n",
-      "0.46666666666666673 -0.5301351308840563 -0.9925934365488716\n"
+      "Mean       :  15.0 9.0 4.0\n",
+      "Variance   :  150.0 6.0 13.1\n",
+      "Covariance :  14.0 -23.5 -8.8\n",
+      "Corr. Coeff :  0.46666666666666673 -0.5301351308840563 -0.9925934365488716\n",
+      "====================\n",
+      "[[35.   5.   0.  20.  15. ]\n",
+      " [11.  12.   5.   9.   8. ]\n",
+      " [ 0.5  0.  10.   4.5  5. ]]\n",
+      "Covariance matrix : \n",
+      " [[150.   14.  -23.5]\n",
+      " [ 14.    6.   -8.8]\n",
+      " [-23.5  -8.8  13.1]]\n",
+      "Correlation Coefficients : \n",
+      " [[ 1.          0.46666667 -0.53013513]\n",
+      " [ 0.46666667  1.         -0.99259344]\n",
+      " [-0.53013513 -0.99259344  1.        ]]\n",
+      "rho(x1,x2) :0.47\n",
+      "rho(x2,x3) :-0.99\n",
+      "rho(x3,x1) :-0.53\n"
      ]
     }
    ],
@@ -263,30 +280,31 @@
     "x_1_mean = x_1.mean()\n",
     "x_2_mean = x_2.mean()\n",
     "x_3_mean = x_3.mean()\n",
-    "print(x_1_mean, x_2_mean, x_3_mean)\n",
+    "print('Mean       : ', x_1_mean, x_2_mean, x_3_mean)\n",
     "x_1_var = x_1.var()\n",
     "x_2_var = x_2.var()\n",
     "x_3_var = x_3.var()\n",
-    "print(x_1_var, x_2_var, x_3_var)\n",
+    "print('Variance   : ', x_1_var, x_2_var, x_3_var)\n",
     "x1_diff = x_1 - x_1.mean()\n",
     "x2_diff = x_2 - x_2.mean()\n",
     "x3_diff = x_3 - x_3.mean()\n",
     "x_12_cov = np.mean(x1_diff*x2_diff)\n",
     "x_13_cov = np.mean(x1_diff*x3_diff)\n",
     "x_32_cov = np.mean(x3_diff*x2_diff)\n",
-    "print( x_12_cov, x_13_cov, x_32_cov)\n",
+    "print('Covariance : ', x_12_cov, x_13_cov, x_32_cov)\n",
     "x_12_corrcoef = x_12_cov / ( x_1.std() * x_2.std())\n",
     "x_13_corrcoef = x_13_cov / ( x_1.std() * x_3.std())\n",
     "x_32_corrcoef = x_32_cov / ( x_3.std() * x_2.std())\n",
-    "print( x_12_corrcoef, x_13_corrcoef, x_32_corrcoef)\n",
-    "#x_total = np.array([x_1, x_2, x_3])  # or x_total = np.stack((x_1, x_2, x_3), axis=0)\n",
-    "#print(x_total)\n",
-    "#print('Covariance matrix : \\n', np.cov(x_total, ddof=0))\n",
-    "#X_cc = np.corrcoef(x_total)\n",
-    "#print('Correlation Coefficients : \\n', X_cc)\n",
-    "#print(f'rho(x1,x2) :{X_cc[1][0]:3.2}')\n",
-    "#print(f'rho(x2,x3) :{X_cc[1][2]:3.2}')\n",
-    "#print(f'rho(x3,x1) :{X_cc[2][0]:3.2}')"
+    "print(\"Corr. Coeff : \", x_12_corrcoef, x_13_corrcoef, x_32_corrcoef)\n",
+    "print(\"==\" * 10)\n",
+    "x_total = np.array([x_1, x_2, x_3])  # or x_total = np.stack((x_1, x_2, x_3), axis=0)\n",
+    "print(x_total)\n",
+    "print('Covariance matrix : \\n', np.cov(x_total, ddof=0))\n",
+    "X_cc = np.corrcoef(x_total)\n",
+    "print('Correlation Coefficients : \\n', X_cc)\n",
+    "print(f'rho(x1,x2) :{X_cc[1][0]:3.2}')\n",
+    "print(f'rho(x2,x3) :{X_cc[1][2]:3.2}')\n",
+    "print(f'rho(x3,x1) :{X_cc[2][0]:3.2}')"
    ]
   },
   {
@@ -297,9 +315,19 @@
     "|------|-------|-------|-------|\n",
     "| 평균 | 15  | 9  |  4 |\n",
     "| 분산 | 150.0 | 6.0  |  13.1 |\n",
-    "|------| $(x_1,x_2)$  |$(x_2,x_3)$|$(x_3,x_1)$ |\n",
-    "| 공분산 |14 | -8.8 |  -23.5 |\n",
-    "|상관계수 |  0.47 | -0.99  | -0.53  |"
+    "\n",
+    "\n",
+    "| 공분산 |  $x_1$  |  $x_2$  | $x_3$  |\n",
+    "|--------|-------|-------|-------|\n",
+    "| $x_1$ | 150.0   | 14  |   -23.5  |\n",
+    "| $x_2$ | 14 | 6.0   |  -8.8 |\n",
+    "| $x_3$ |  -23.5  | -8.8 | 13.1 |\n",
+    "\n",
+    "| 상관계수 |  $x_1$  |  $x_2$  | $x_3$  |\n",
+    "|--------|-------|-------|-------|\n",
+    "| $x_1$ |  1  | 0.47  |  -0.53   |\n",
+    "| $x_2$ | 0.47 | 1  |  -0.99 |\n",
+    "| $x_3$ | -0.53  | -0.99 | 1 |"
    ]
   },
   {
@@ -389,6 +417,8 @@
     "\n",
     "조건부 확률로부터  **P[B]P[A|B] = P(A∩B)** 또는  **P[A]P[B|A] = P(A∩B)** 가 성립한다. A와 B 사건이 동시에 발생하는 확률을 “**결합확률(joint probability)**” 또는 **\"동시확률”**이라 하며, 조건부 확률의 수식으로 유도 할 수 있는데, 이를 **\"곱셈 법칙\"** 이라고 한다.\n",
     "\n",
+    "$$ P(A\\cap B) = P[B] P[A|B] = P[A] P[B|A]$$\n",
+    "\n",
     "만약, 각 사건 **A와 B가 독립이라면**, (동일한 시행을 반복할 때, 각 시행의 결과가 서로 독립일 경우 독립시행이라 한다. 예를 들어 주사위를 두 번 던지는 행위 등.) P[A|B]=P(A)이 되므로 위의 곱셈 법칙에 대입하면, P[B]×P[A]=P(A∩B)가 성립한다. \n",
     "\n",
     "\n",
@@ -412,7 +442,11 @@
    "source": [
     "#### 베이즈의 정리\n",
     "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Thomas_Bayes.gif/225px-Thomas_Bayes.gif\" align=\"right\" width=\"200\">\n",
+    "\n",
     "$B_1, B_2, \\cdots, B_N$ 의 합집합이 표본 공간 $S$인 경우, $A$ 사건이 일어났을 때 $B_j$ 사건이 일어날 확률은?\n",
+    "\n",
+    "\n",
     "\n",
     "$$ P[B_j |A] = { P[A\\cap B_j] \\over P[A] } = { P[A|B_j] P[B_j] \\over \\sum_{k=1}^N P[A|B_k] P[B_k]}$$\n",
     "\n",
@@ -480,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
