--- a/4. Random Variable & Probability Distribution.ipynb
+++ b/4. Random Variable & Probability Distribution.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "* **상관계수**\n",
     "\n",
-    "두 확률변수 $X$ 와 $Y$ 의 공분산은 기대값 연산자를 사용하여 다음과 같이 정의된다.\n",
+    "랜덤 벡터들로 생성된 행렬 $X$의 공분산 행렬은 기대값 연산자를 사용하여 다음과 같이 정의된다.\n",
     "\n",
     "$$ \\Sigma = E[(X-\\mu) (X-\\mu)^T ] = E[XX^T] - \\mu E[X] - \\mu E[X^T] + \\mu \\mu^T= S - \\mu \\mu^T$$\n",
     "\n",
@@ -331,16 +331,16 @@
     "\n",
     "| Examples | $X_1$ | $X_2$ | $X_3$ |\n",
     "|---|---|---|---|\n",
-    "| 1 | 2 | 2 | 4 |\n",
-    "| 2 | 3 | 4 | 6 |\n",
-    "| 3 | 5 | 4 | 2 |\n",
-    "| 4 | 6 | 6 | 4 |\n",
+    "| A | 2 | 2 | 4 |\n",
+    "| B | 3 | 4 | 6 |\n",
+    "| C | 5 | 4 | 2 |\n",
+    "| D | 6 | 6 | 4 |\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -361,9 +361,9 @@
    ],
    "source": [
     "X = np.array([[2,3,5,6],[2,4,4,6],[4,6,2,4]])\n",
-    "X_mean = np.mean(X, axis=1)\n",
-    "print(\"Mean \", X_mean)\n",
-    "X_diff = (X.T - X_mean).T\n",
+    "Mu = np.mean(X, axis=1)  # [mu1, mu2, ...]\n",
+    "print(\"Mean \", Mu)\n",
+    "X_diff = (X.T - Mu).T\n",
     "print(\"difference \\n\", X_diff)\n",
     "X_cov = np.dot(X_diff, X_diff.T) / 4\n",
     "print(\"covariance matrix \\n\", X_cov)"
@@ -402,7 +402,7 @@
     }
    ],
    "source": [
-    "print(\"Covariance Matrix \\n\", np.cov(X, ddof=0))\n",
+    "print(\"Covariance Matrix \\n\", np.cov(X, ddof=0))  # ddof=0 biased 결과흫 의미함\n",
     "print(\"Correlation Coefficient \\n\", np.corrcoef(X))\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(9,2))\n",
     "# fig.suptitle('Scatter plots for each different pair ')\n",
