--- a/4-1. Gaussian Distribution.ipynb
+++ b/4-1. Gaussian Distribution.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 4-1. 가우시안 분포(Gaussian Distribution)\n",
     "\n",
-    "확률 이론에서 가우시안 (또는 정규) 분포는 매우 일반적인 연속 확률 분포입니다. 정규 분포는 통계에서 중요하며, 분포가 알려지지 않은 실제 값의 랜덤 변수를 나타 내기 위해 자연 및 사회 과학에서 종종 사용됩니다. \n",
+    "확률 이론에서 **가우시안 (또는 정규) 분포**는 매우 일반적인 연속 확률 분포입니다. 정규 분포는 통계에서 중요하며, 분포가 알려지지 않은 실제 값의 랜덤 변수를 나타내기 위해 자연 및 사회 과학에서 종종 사용됩니다. \n",
     "\n",
     "#### 단변량 가우시안 확률밀도 함수\n",
     "\n",
@@ -20,7 +20,7 @@
     "\n",
     "$$ f(x;\\mu=0, \\sigma^2=1) = { 1 \\over \\sqrt{2 \\pi} 1 } \\exp \\left[-{1 \\over 2} \\left({x \\over 1}\\right)^2\\right] = \\mathscr{N}(\\mu=0, \\sigma^2=1)$$\n",
     "\n",
-    "$$ f(x;\\mu=0, \\sigma^2=4) = { 1 \\over \\sqrt{2 \\pi} 4 } \\exp \\left[-{1 \\over 2} \\left({x \\over 2}\\right)^2\\right] = \\mathscr{N}(\\mu=0, \\sigma^2=4)$$\n",
+    "$$ f(x;\\mu=0, \\sigma^2=4) = { 1 \\over \\sqrt{2 \\pi} 2 } \\exp \\left[-{1 \\over 2} \\left({x \\over 2}\\right)^2\\right] = \\mathscr{N}(\\mu=0, \\sigma^2=4)$$\n",
     "\n",
     "$$ f(x;\\mu=2, \\sigma^2=9) = { 1 \\over \\sqrt{2 \\pi} 3 } \\exp \\left[-{1 \\over 2} \\left({x-2 \\over 3}\\right)^2\\right] = \\mathscr{N}(\\mu=2, \\sigma^2=9)$$"
    ]
@@ -225,8 +225,7 @@
     "* 중심 극한 정리 (Central Limit Theorem)로 인하여 매우 유용한 분포임. \n",
     "\n",
     "**중심 극한 정리 (central Limit Theorem)** : 평균 $\\mu$ 와 분산 $\\sigma^2$ 를 갖는 경우 평균의 표본\n",
-    "분포는 표본의 크기($N$)가 증가함에 따라, 평균 $\\mu$ 와 분산 $\\sigma^2 /N$을 갖는 정규분포로 접\n",
-    "근한다. \n",
+    "분포는 표본의 크기($N$)가 증가함에 따라, 평균 $\\mu$ 와 분산 $\\sigma^2 /N$을 갖는 정규분포로 접근한다. \n",
     "\n",
     "균등 분포(uniform distribution) (연속 확률 분포의 한 가지로 주어진 구간 내의 모든 점에 대해 동일한 확률을 가지는 분포를 의미한다.) 의 자료로부터 500번의 실험을 수행한 경우 \n",
     "* N=1 : 분포로부터 하나의 표본을 추출하고 그의 평균을 기록 ( 히스토그램은 일정한 밀도를 보임)\n",
@@ -421,12 +420,12 @@
     "\\begin{bmatrix}0.25 & 0\\\\ 0 & 1\\end{bmatrix}\n",
     "\\begin{bmatrix}x_1  \\\\ x_2  \\end{bmatrix}\n",
     "=\n",
-    "\\dfrac{1}{10}\\left(0.25\\times x_1^2 + x_2^2\\right)\n",
+    "\\dfrac{1}{10}\\left(0.25  x_1^2 + x_2^2\\right)\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\mathcal{N}(x_1, x_2) = \\dfrac{1}{2\\sqrt{5}\\pi}\n",
-    "\\exp \\left( -\\dfrac{1}{10}\\left(7(x_1 - 2)^2 - 6(x_1 - 2)(x_2 - 3) + 2(x_2 - 3)^2\\right) \\right)\n",
+    "\\mathcal{N}(x_1, x_2) = \\dfrac{1}{4\\pi}\n",
+    "\\exp \\left( -\\dfrac{1}{20}\\left(0.25  x_1^2 + x_2^2\\right) \\right)\n",
     "$$\n",
     "\n",
     "이 확률밀도함수의 모양은 다음과 같다."
@@ -640,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
