--- a/6. Quadratic Classification.ipynb
+++ b/6. Quadratic Classification.ipynb
@@ -46,12 +46,12 @@
     "\n",
     "특징벡터의 크기가 D차원인 경우, 가우시안 확률밀도 함수의 일반식\n",
     "\n",
-    "$$ f_X(\\mathbf{x}) = { 1 \\over(2 \\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right]$$\n",
+    "$$ f_X(\\mathbf{x}) = { 1 \\over (2\\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right]$$\n",
     "\n",
     "위의 식으로부터 MAP(Maximum A Posteriori: 최대사후확률) 판별함수는 다음과 같이 유도된다.\n",
     "\n",
     "$$ g_i(\\mathbf{x}) = P(\\omega_i | \\mathbf{x}) = { P(\\mathbf{x}|\\omega_i) P(\\omega_i) \\over P(\\mathbf{x}) }$$\n",
-    "$$= { 1 \\over(2 \\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] {P(\\omega_i) \\over P(x)} $$\n",
+    "$$= { 1 \\over (2\\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] {P(\\omega_i) \\over P(x)} $$\n",
     "\n",
     "상수 항들($P(\\mathbf{x}), 2\\pi$)을 제거하고 다시 쓰면\n",
     "\n",
@@ -60,7 +60,7 @@
     "위 식에 단조증가함수인 자연로그를 취하면\n",
     "\n",
     "$$ g_i(\\mathbf{x}) = -{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu})\n",
-    "- { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i)) $$\n",
+    "- {1 \\over 2} \\log(|\\Sigma_i|) + \\log (P(\\omega_i)) $$\n",
     "\n",
     "이 되고, 두번째 세번째 항은 실수의 스칼라 값이 되므로,\n",
     "\n",
@@ -74,6 +74,7 @@
     " \\begin{bmatrix} a_{11} & a_{12} & \\cdots & a_{1D} \\\\ a_{12} & a_{22} & \\cdots & a_{2D} \\\\ \\vdots &  & \\cdots & \\vdots \\\\ a_{1D} & \\cdots & \\cdots & a_{DD} \\end{bmatrix} \\begin{bmatrix} x_1-\\mu_1\\\\x_2-\\mu_2\\\\ \\vdots \\\\ x_D-\\mu_D  \\end{bmatrix}\n",
     "$$\n",
     "\n",
+    "\n",
     "$$\n",
     " = \n",
     "\\begin{bmatrix} a_{11}(x_1-\\mu_1) + a_{12}(x_2-\\mu_2) + \\vdots + a_{1D}(x_D-\\mu_D) \\\\\n",
@@ -82,6 +83,7 @@
     "a_{1D}(x_1-\\mu_1) + a_{2D}(x_2-\\mu_2) + \\vdots + a_{DD}(x_D-\\mu_D) \\\\\n",
     "\\end{bmatrix}^T \\begin{bmatrix} x_1-\\mu_1\\\\x_2-\\mu_2\\\\ \\vdots \\\\ x_D-\\mu_D  \\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "\n",
     "$$\n",
     "= ax_1^2 + bx_2^2 + \\cdots + cx_D^2 + dx_1 x_2 + ex_1x_3 + \\cdots + fx_{D-1}x_D + g x_1+ h x_2 + \\cdots + ix_D + j\n",
@@ -150,13 +152,17 @@
     "\n",
     "$$ \\Sigma_i = \\Sigma = \\begin{bmatrix} \\sigma_1^2 & 0 & 0 \\\\  0 & \\sigma_2^2 & 0  \\\\ 0 & 0 & \\sigma_D^2   \\end{bmatrix} $$ \n",
     "\n",
+    "\n",
     "$$ g_i(\\mathbf{x}) = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
     "- { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i)) $$\n",
+    "\n",
     "\n",
     "$$ = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\begin{bmatrix} \\sigma_1^{-2} & 0 & 0 \\\\  0 & \\sigma_2^{-2} & 0  \\\\ 0 & 0 & \\sigma_D^{-2}   \\end{bmatrix}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
     "- { 1 \\over 2} \\log( \\sigma_1^2 \\cdots \\sigma_D^2)  + \\log(P(\\omega_i)) $$\n",
     "\n",
+    "\n",
     "$$ =  -{1 \\over 2} \\sum_{k=1}^D {(\\mathbf{x}[k] -\\mathbf{\\mu_i}[k])^2 \\over \\sigma_k^2 }  - { 1 \\over 2} \\log \\prod_{k=1}^D \\sigma_k^2  + \\log(P(\\omega_i)) $$\n",
+    "\n",
     "\n",
     "$$ =  -{1 \\over 2} \\sum_{k=1}^D {x[k]^2 - 2x[k]\\mu_i[k] + \\mu_i[k]^2 \\over \\sigma_k^2 }  - { 1 \\over 2} \\log \\prod_{k=1}^D \\sigma_k^2  + \\log(P(\\omega_i)) $$\n",
     "\n",
@@ -197,7 +203,7 @@
     "- { 1 \\over 2} \\log(|\\Sigma|) + \\log(P(\\omega_i)) $$\n",
     "\n",
     "모든 클래스 $\\omega_i$ 에 대하여 상수인  $ \\log(|\\Sigma|)$ 를 제거하면\n",
-    "$$  g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
+    "$$ g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
     " + \\log(P(\\omega_i)) $$\n",
     "\n",
     "판별함수는 $\\mathbf{x}$ 와 평균들 간의 **마할라노비스 거리(mahalanobis distance)** 함수 \n",
@@ -232,8 +238,10 @@
     "\n",
     "$$ \\Sigma_i = \\sigma_i^2 I = \\begin{bmatrix} \\sigma_i^2 & 0 & 0 \\\\ 0 & \\sigma_i^2 &0  \\\\ 0 & 0 & \\sigma_i^2   \\end{bmatrix} $$ \n",
     "\n",
+    "\n",
     "$$ g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
     "- { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i)) $$\n",
+    "\n",
     "\n",
     "$$  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\sigma_i^2(\\mathbf{x}- \\mathbf{\\mu_i}) \n",
     "- { 1 \\over 2} D \\log(\\sigma_i^2) + \\log(P(\\omega_i)) $$"
@@ -262,19 +270,20 @@
     "\n",
     "Case 5 :  $\\Sigma_i \\ne \\Sigma_j$ 일반형\n",
     "\n",
-    "$$ g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
+    "$$g_i(\\mathbf{x})  = -{1 \\over 2} (\\mathbf{x}-\\mathbf{\\mu_i})^T \\Sigma_i^{-1}(\\mathbf{x}-\\mathbf{\\mu_i}) \n",
     "- { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i)) $$\n",
     "\n",
     "$$  = \\mathbf{x}^T W_i \\mathbf{x} + w_i^T \\mathbf{x} + w_{i0} $$\n",
     "\n",
     "Where\n",
-    "\\begin{cases}\n",
-    "    W_i &  = -{1 \\over 2} \\Sigma_i^{-1} \\\\\n",
-    "   w_i  & = \\Sigma_i^{-1} \\mu_i \\\\\n",
-    "   w_{i0} & = -{1 \\over 2} \\mathbf{\\mu_i}^T \\Sigma_i^{-1}\\mathbf{\\mu_i} \n",
-    "- { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i) \n",
-    "  \\end{cases}\n",
     "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "   W_i &  = -{1 \\over 2} \\Sigma_i^{-1} \\\\\n",
+    "   w_i & = \\Sigma_i^{-1} \\mu_i \\\\\n",
+    "   w_{i0} & = -{1 \\over 2} \\mathbf{\\mu_i}^T \\Sigma_i^{-1}\\mathbf{\\mu_i} - { 1 \\over 2} \\log(|\\Sigma_i|) + \\log(P(\\omega_i) \n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n"
    ]
   },
@@ -292,11 +301,6 @@
     "<img src=\"images/case5-ex2.jpg\"  align=\"left\"  width=\"250\">\n",
     "<img src=\"images/case5-ex3.png\"  width=\"400\">"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -336,15 +340,24 @@
     " + \\ln P(\\omega_i) = { 1 \\over 2} \\begin{bmatrix} x_1-\\mu_{i1}\\\\x_2-\\mu_{i2}\\\\x_3-\\mu_{i3}  \\end{bmatrix}^T\n",
     " \\begin{bmatrix} 4 & 0 & 0  \\\\ 0 & 4 & 0 \\\\0 & 0 & 4 \\end{bmatrix} \\begin{bmatrix} x_1-\\mu_{i1}\\\\x_2-\\mu_{i2}\\\\x_3-\\mu_{i3}  \\end{bmatrix} +  \\ln P(\\omega_i)$$\n",
     " \n",
-    " $$ g_1(x) = { 1 \\over 2} \\begin{bmatrix} x_1 \\\\x_2 \\\\x_3   \\end{bmatrix}^T\n",
+    " \n",
+    "$$ g_1(x) = { 1 \\over 2} \\begin{bmatrix} x_1 \\\\x_2 \\\\x_3   \\end{bmatrix}^T\n",
     " \\begin{bmatrix} 4 & 0 & 0  \\\\ 0 & 4 & 0 \\\\0 & 0 & 4 \\end{bmatrix} \\begin{bmatrix} x_1 \\\\x_2\\\\x_3  \\end{bmatrix} +  \\ln {1 \\over 3}$$\n",
+    " \n",
     " \n",
     "$$ g_2(\\mathbf{x}) = { 1 \\over 2} \\begin{bmatrix} x_1-1\\\\x_2-1\\\\x_3-1 \\end{bmatrix}^T\n",
     " \\begin{bmatrix} 4 & 0 & 0  \\\\ 0 & 4 & 0 \\\\0 & 0 & 4 \\end{bmatrix} \\begin{bmatrix} x_1-1\\\\x_2-1\\\\x_3-1 \\end{bmatrix} +  \\ln {2 \\over 3}$$\n",
     " \n",
+    " \n",
     " $$g_1(\\mathbf{x}) \\overset{\\omega_1}{\\underset{\\omega_2}{\\gtrless}} g_2(\\mathbf{x}) $$\n",
+    " \n",
+    " \n",
     " $$ -2(x_1^2 +x_2^2 + x_3^2) + ln {1 \\over 3} \\overset{\\omega_1}{\\underset{\\omega_2}{\\gtrless}}  -2((x_1-1)^2 +(x_2-1)^2 +(x_3-1)^2 ) +ln {2 \\over 3}$$\n",
+    " \n",
+    " \n",
     " $$ x_1 + x_2 + x_3 \\overset{\\omega_1}{\\underset{\\omega_2}{\\lessgtr}} { 6 - ln2 \\over 4 } = 1.32 $$\n",
+    " \n",
+    " \n",
     " $$ 0.1 + 0.7 + 0.8 = 1.6   \\overset{\\omega_1}{\\underset{\\omega_2}{\\lessgtr}}  1.32 \\Rightarrow x_u \\in \\omega_2 $$"
    ]
   }
@@ -365,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
