--- a/7. Clustering.ipynb
+++ b/7. Clustering.ipynb
@@ -287,8 +287,8 @@
     "\n",
     "DBSCAN(Density-Based Spatial Clustering of Applications with Noise) 방법은 데이터가 밀집한 정도 즉 밀도를 이용하여 **클러스터의 형태에 구애받지 않으며,** **클러스터의 갯수를 사용자가 지정할 필요가 없다**. DBSCAN 방법에서는 초기 데이터로부터 근접한 데이터를 찾아나가는 방법으로 클러스터를 확장한다. 이 때 다음 사용자 인수를 사용한다.\n",
     "\n",
-    "* epsilon $\\varepsilon$: 이웃(neighborhood)을 정의하기 위한 거리\n",
-    "* 최소 데이터 갯수(minimum points): 밀집지역을 정의하기 위해 필요한 이웃의 갯수\n",
+    "* **epsilon $\\varepsilon$**: 이웃(neighborhood)을 정의하기 위한 거리\n",
+    "* **최소 데이터 갯수(minimum points)**: 밀집지역을 정의하기 위해 필요한 이웃의 갯수\n",
     "\n",
     "만약 $\\varepsilon$ 거리 안의 이웃 영역 안에 최소 데이터 갯수 이상의 데이터가 있으면 그 데이터는 **핵심(core) 데이터**이다. 이렇게 핵심 데이터를 찾아낸 다음에는 이 핵심 데이터의 이웃영역 안에 있는 데이터를 이 핵심데이터와 연결된(reached) **고밀도 데이터**로 정의한다. 고밀도 데이터의 이웃영역 안에 있는 데이터도 마찬가지로 연결된 고밀도 데이터가 된다. 만약 고밀도 데이터에 더 이상 이웃이 없으면 이 데이터는 **경계(border) 데이터**라고 하며 연결은 끝난다. 핵심 데이터도 아니고 경계 데이터도 아닌 데이터를 **outlier**라고 한다.\n",
     "\n",
@@ -375,7 +375,7 @@
    "source": [
     "### hard clustering vs. soft clustering\n",
     "\n",
-    "K-means 알고리즘의 중요한 특징 중 하나는 하드 클러스터링(hard clustering) 방법이라는 점입니다. 즉, 각 포인트를 하나의 클러스터에만 연결합니다. 이 접근 방식의 한계는 데이터 포인트가 특정 클러스터와 얼마나 관련되어 있는지 알려주는 불확실성 측정 또는 확률이 없다는 것입니다. 그렇다면 하드 클러스터링 대신 소프트 클러스터링(soft clustering)을 사용하는 것은 어떨까요? 이것이 바로 가우시안 혼합 모델(Gaussian Mixture Model: GMM)이 시도하는 것입니다. "
+    "K-means 알고리즘의 중요한 특징 중 하나는 **하드 클러스터링(hard clustering) 방법**이라는 점입니다. 즉, **각 포인트를 하나의 클러스터에만 연결**합니다. 이 접근 방식의 한계는 데이터 포인트가 특정 클러스터와 얼마나 관련되어 있는지 알려주는 **불확실성 측정 또는 확률이 없다는 것**입니다. 그렇다면 하드 클러스터링 대신 소프트 클러스터링(soft clustering)을 사용하는 것은 어떨까요? 이것이 바로 가우시안 혼합 모델(Gaussian Mixture Model: GMM)이 시도하는 것입니다. "
    ]
   },
   {
@@ -388,9 +388,9 @@
     "$  k \\in \\{1, \\cdots, K\\}$ 로 구분되며, \n",
     "여기에서 $K$ 는 주어진 자료에서의 클러스터 개수를 말한다. \n",
     "혼합의 각 가우시안 $k$ 는 다음의 파라미터로 구성됩니다.\n",
-    "* 중심을 정의하는 평균 $μ$.\n",
-    "* 폭을 정의하는 공분산 $Σ$. 이것은 다변량 가우시안에서 타원체의 치수와 같습니다.\n",
-    "* 가우스 함수의 크기를 결정하는 혼합 확률 $π$  \n",
+    "* **중심을 정의하는 평균 $μ$**.\n",
+    "* **폭을 정의하는 공분산 $Σ$**. 이것은 다변량 가우시안에서 타원체의 치수와 같습니다.\n",
+    "* 가우스 함수의 크기를 결정하는 **혼합 확률 $π$**  \n",
     "\n",
     "이러한 파라메타들을 그래픽으로 설명하면 다음과 같다.\n",
     "\n",
@@ -398,24 +398,24 @@
     "\n",
     "여기에서, 우리는 세 개의, 즉 $K=3$, 가우시안 함수가 있음을 알 수 있습니다. \n",
     "각 가우시안은 주어진 세 개의 클러스터 각각에 포함된 자료들을 설명합니다. \n",
-    "혼합 계수들(mixing coefficients)은 그들의 확률이며, 다음의 조건을 충족해야 한다. \n",
+    "**혼합 계수들(mixing coefficients)**은 그들의 확률이며, 다음의 조건을 충족해야 한다. \n",
     "\n",
     "$$ \\sum_{k=1}^K \\pi_k = 1$$\n",
     "\n",
     "이제 이러한 파라메타에 대한 최적의 값을 어떻게 결정합니까? \n",
     "이를 위해서는 각 가우시안이 각 클러스터에 속하는 데이터 포인트에 맞는지 확인해야 합니다. \n",
-    "이것이 바로 최대 우도(Maximum Likelihood)가 하는 것 입니다.\n",
+    "이것이 바로 최대 우도(Maximum Likelihood)가 하는 것입니다.\n",
     "\n",
     "일반적으로 가우시안 밀도함수는 다음과 같이 주어집니다.\n",
     "\n",
     "$$\\mathcal{N}(\\mathbf{x}\\mid \\mu, \\Sigma) = { 1 \\over (2\\pi)^{D/2} |\\Sigma|^{1/2} } \\exp \\left( - {1 \\over 2} (\\mathbf{x}-\\mu)^T\\Sigma^{-1}(\\mathbf{x}-\\mu) \\right) $$\n",
     "\n",
     "여기에서 \n",
-    "* $X$는 우리의 데이타 세트를 나타내고,  \n",
-    "* $D$는 각각의 데이터 포인트의 차원의 수이다.  \n",
-    "* $μ$와 $Σ$는 각각 평균과 공분산입니다.  \n",
+    "* $\\mathbf{x}$ 는 우리의 데이타 세트를 나타내고,  \n",
+    "* $D$ 는 각각의 데이터 포인트의 차원의 수이다.  \n",
+    "* $μ$ 와 $Σ$ 는 각각 평균과 공분산입니다.  \n",
     "\n",
-    "$N = 1000$ 인 3 차원 점(D = 3)으로 구성된 데이터 집합이 있는 경우, $x$는 $1000 \\times 3$ 행렬이 됩니다. $μ$는 $1 \\times 3$ 벡터가 되고 $\\Sigma$는 $3 \\times 3$ 행렬이 됩니다. 나중에 최대로그우도를 찾기 위해 이 방정식의 로그를 얻는 것이 유용하다.\n",
+    "$N = 1000$ 인 3 차원 점(D = 3)으로 구성된 데이터 집합이 있는 경우, $\\mathbf{x}$는 $1000 \\times 3$ 행렬이 됩니다. $μ$는 $1 \\times 3$ 벡터가 되고 $\\Sigma$는 $3 \\times 3$ 행렬이 됩니다. 나중에 최대 로그우도를 찾기 위해 이 방정식의 로그를 얻는 것이 유용하다.\n",
     "\n",
     "$$ \\ln \\mathcal{N}(\\mathbf{x}\\mid \\mu, \\Sigma) = -{D\\over2}\\ln 2 \\pi -{1\\over2}\\ln \\Sigma -{1\\over2}(\\mathbf{x}-\\mu)^T\\Sigma^{-1}(\\mathbf{x}-\\mu) $$\n",
     "\n",
@@ -437,7 +437,7 @@
     "\n",
     "$$ \\gamma (z_{nk}) = p(z_{k}=1|x_n)$$\n",
     "\n",
-    "이를 \"주어진 데이터 포인트 $x_n$이 가우시안 분포 $k$로부터 나올 확률\"이라고 읽습니다.  여기에서 $z_{k} \\in \\{0,1\\}$ 이며, $x_n$이 주어졌을 때 GMM의 $k$번째 Gaussian distribution이 선택되면 1, 아니면 0의 값을 갖는 이진변수이다. 즉, $z_{k}$가 1 이라는 것은 $x_n$이 k번째 Gaussian distribution에서 생성되었다는 것을 의미한다. GMM을 이용한 분류는 $x_n$이 주어졌을 때, $k$개의 $\\gamma(z_{nk})$를 계산하여 가장 값이 높은 가우시안 분포를 선택하는 것이다. \n",
+    "이를 \"**주어진 데이터 포인트 $x_n$이 가우시안 분포 $k$로부터 나올 확률**\"이라고 읽습니다.  여기에서 $z_{k} \\in \\{0,1\\}$ 이며, $x_n$이 주어졌을 때 GMM의 $k$번째 Gaussian distribution이 선택되면 1, 아니면 0의 값을 갖는 이진변수이다. 즉, $z_{k}$가 1 이라는 것은 $x_n$이 k번째 Gaussian distribution에서 생성되었다는 것을 의미한다. GMM을 이용한 분류는 $x_n$이 주어졌을 때, $k$개의 $\\gamma(z_{nk})$를 계산하여 가장 값이 높은 가우시안 분포를 선택하는 것이다. \n",
     "\n",
     "\n",
     "학습을 통해 GMM의 모든 parameter $\\pi,\\mu,\\Sigma $의 값이 결정되었다면, 베이즈 정리(Bayes' theorem)을 이용하여 $\\gamma (z_{nk})$를 다음과 같이 계산할 수 있다.\n",
@@ -537,10 +537,11 @@
    "source": [
     "GMM의 parameter 추정을 위한 EM 알고리즘은 모수와 responsiblity를 번갈아 추정하며 정확도를 높여가는 방법이다.\n",
     "\n",
-    "* Expectation step 에서는 우리가 현재까지 알고 있는 모수가 정확하다고 가정하고 이를 사용하여 각 데이터가 어느 카테고리에 속하는지 즉, responsiblity를 추정한다.\n",
+    "* **Expectation step** 에서는 우리가 현재까지 알고 있는 **모수가 정확하다고 가정하고** 이를 사용하여 각 데이터가 어느 카테고리에 속하는지 즉, **responsiblity를 추정**한다.\n",
     "$$ (\\pi_k, \\mu_k, \\Sigma_k) \\;\\; \\implies \\;\\;\\gamma(z_{nk})$$\n",
+    "\n",
     " \n",
-    "* Maximization step 에서는 우리가 현재까지 알고 있는 responsibility가 정확하다고 가정하고 이를 사용하여 모수값을 추정한다.\n",
+    "* **Maximization step** 에서는 우리가 현재까지 알고 있는 **responsibility가 정확하다고 가정하고** 이를 사용하여 **모수값을 추정**한다.\n",
     "$$\\gamma(z_{nk}) \\;\\; \\implies \\;\\; (\\pi_k, \\mu_k, \\Sigma_k)$$\n",
     " \n",
     "이를 반복하면 모수와 responsibility를 동시에 점진적으로 개선할 수 있다.\n",
@@ -677,8 +678,7 @@
    "metadata": {},
    "source": [
     "**[reference]**  \n",
-    "* https://towardsdatascience.com/gaussian-mixture-models-explained-6986aaf5a95\n",
-    "* https://datascienceschool.net/view-notebook/c2934b8a2f9140e4b8364b266b1aa0d8/"
+    "* https://towardsdatascience.com/gaussian-mixture-models-explained-6986aaf5a95"
    ]
   }
  ],
