--- a/7. Clustering.ipynb
+++ b/7. Clustering.ipynb
@@ -468,7 +468,7 @@
     "   $$\n",
     "   \n",
     "   \n",
-    "직관적으로 likelihood는 어떠한 모델에서 데이터 $X=\\{x_1,x_2,...,x_N\\}$가 생성되었을 확률을 나타낸다. 위의 식에서 정의한 log-likelihood는 기본적인 likelihood와 동일한 의미를 가지며, 계산상의 편의를 위해 likelihood에 log를 취한 형태이다. 따라서, log-likelihood를 최대화하는 $\\pi,\\mu,\\Sigma $ 추정하는 것은 주어진 데이터 X를 가장 잘 표현하는 GMM을 구성하는 것과 동일한 의미를 갖는다.\n",
+    "직관적으로 likelihood는 어떠한 모델에서 데이터 $X=\\{x_1,x_2,...,x_N\\}$가 생성되었을 확률을 나타낸다. 위의 식에서 정의한 log-likelihood는 기본적인 likelihood와 동일한 의미를 가지며, 계산상의 편의를 위해 likelihood에 자연 log를 취한 형태이다. 따라서, log-likelihood를 최대화하는 $\\pi,\\mu,\\Sigma $ 추정하는 것은 주어진 데이터 X를 가장 잘 표현하는 GMM을 구성하는 것과 동일한 의미를 갖는다.\n",
     "\n",
     "최대로그-우도(MLE:Maximum log-likelihood)를 얻기 위해서 각각의 $\\pi_k,\\mu_k,\\Sigma_k $에 대해 $\\mathcal{L}(X;\\theta)$를 편미분한 값을  0으로 놓고 정리하여 구한다.  최적의 평균($\\mu_k$) 추정치를 유도하는 과정은 아래와 같다.\n",
     "\n",
