--- a/11. LDA.ipynb
+++ b/11. LDA.ipynb
@@ -526,7 +526,7 @@
    "metadata": {},
    "source": [
     "### LDA vs PCA\n",
-    "냄새감지문제에서의 PCA와 LDA의 효용성 실험. - 다섯 종류의 커피빈을 화학가스감지기에 실험하였다. 각각의 커피에 대하여 45회 실험을 한 후에 가스감지반응을 처리하여 60차원의 특징벡터를 얻어 냈다.\n",
+    "**냄새감지문제에서의 PCA와 LDA**의 효용성 실험. - 다섯 종류의 커피빈을 화학가스감지기에 실험하였다. 각각의 커피에 대하여 **45회 실험**을 한 후에 가스감지반응을 처리하여 **60차원의 특징벡터**를 얻어 냈다.\n",
     "3차원 분산플롯결과는 LDA 가 PCA보다 클래스판별에 뛰어나다는 것을 명확히 보여주고 있다.\n",
     "\n",
     "<img src=\"./images/LDA-PCA-1.png\" width=\"400\">\n",
@@ -543,7 +543,7 @@
     "* https://sebastianraschka.com/Articles/2014_python_lda.html\n",
     "\n",
     "[References]\n",
-    "* http://courses.cs.tamu.edu/rgutier/cs790_w02/l6.pdf\n",
+    "\n",
     "* http://www.sci.utah.edu/~shireen/pdfs/tutorials/Elhabian_LDA09.pdf\n"
    ]
   }
