--- a/11. LDA.ipynb
+++ b/11. LDA.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "<br><br>\n",
     "\n",
-    "<img src=\"images/LDA-dim-reduce.png\" width=\"600\">"
+    "<img src=\"./images/LDA-dim-reduce.PNG\" width=\"600\">"
    ]
   },
   {
