--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -53,10 +53,7 @@
     "$$f(x) = {1 \\over {1 + e^{-x}}}$$\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg\" width=200 height=400>\n",
     "<br>\n",
-    "\n",
-    "(http://euler.stat.yale.edu/~tba3/stat665/lectures/lec12/img/neuron_model.jpeg)\n",
-    "\n",
-    "<img src=\"images/neoron-math.jpg\" height=400 width=400>"
+    "<img src=\"images/neuron-math.jpg\" height=400 width=400>"
    ]
   },
   {
@@ -99,7 +96,7 @@
     "바이어스 입력($x_0 = 1$)을 포함하여 입력이 3 또는 2 개, 출력이 1개인 구조, 연결 가중치 설정이 중요\n",
     "<img src=\"https://schwalbe10.github.io/thinkage/images/posts/perceptron.png\" width=\"300\" height=\"200\">\n",
     "### AND\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/and.png\" align=left width=\"200\">\n",
+    "<img src=\"./images/and.png\" align=left width=\"200\">\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
     "\n",
     "\n",
@@ -111,8 +108,9 @@
     " 1 | 1 | g(10) $\\sim 1 $\n",
     " \n",
     " <br>\n",
+    " \n",
     "### OR\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/or.png\" align=left width=\"200\">\n",
+    "<img src=\"./images/or.png\" align=left width=\"200\">\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
     "\n",
     "$X_1$ | $X_2$ |g(-10 + 20$X_1$ + 20$X_2$)\n",
@@ -123,8 +121,9 @@
     " 1 | 1 | g(30)  $\\sim 1$ \n",
     " \n",
     " <br>\n",
+    " \n",
     "### NOT\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/not.png\" align=left width=\"200\">\n",
+    "<img src=\"./images/not.png\" align=left width=\"200\">\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
     "\n",
     "$X_1$ | g(10 - 20 $X_1$)\n",
