--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -150,16 +150,16 @@
    },
    "source": [
     "### XNOR 구현 : 2개층 구조로 구현가능\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/and-color.png\" align=left width=\"220\">\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/not-and-color.png\" align=left width=\"220\">\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/or-color.png\" align=left width=\"220\">"
+    "<img src=\"./images/and-color.png\" align=left width=\"220\">\n",
+    "<img src=\"./images/not-and-color.png\" align=left width=\"220\">\n",
+    "<img src=\"./images/or-color.png\" align=left width=\"220\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/xnor-color.png\" align=left width=\"300\">\n",
+    "<img src=\"./images/xnor-color.png\" align=left width=\"300\">\n",
     "\n",
     "$x_1$ | $x_2$ | $a_1$ | $a_2$ | $y$ \n",
     "----- | ----- | ----- | ----- |----\n",
@@ -174,8 +174,8 @@
    "metadata": {},
    "source": [
     "### 신경망 층의 수와 결정 영역의 특성\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/multi-layer.png\" width=\"500\" > \n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/decision_boundary.png\" width=\"600\" > "
+    "<img src=\"./images/multi-layer.png\" width=\"500\" > \n",
+    "<img src=\"./images/decision_boundary.png\" width=\"600\" > "
    ]
   },
   {
@@ -184,7 +184,7 @@
    "source": [
     "## 신경망 다중분류기 (Neural Network multi-class Classification)\n",
     "\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/multi-classification-layer.png\" width=\"500\" > \n",
+    "<img src=\"./images/multi-classification-layer.png\" width=\"500\" > \n",
     "\n",
     "#### 이진분류기 (Binary Classification) : 1 output unit ( y = 0 or 1)\n",
     "\n",
@@ -245,7 +245,8 @@
    "source": [
     "## An example for a given one trainnig data (x,y) \n",
     "### 전향파 (forward propabation) 알고리즘\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/forward.png\" width=\"350\" align=\"right\">\n",
+    "<img src=\"./images/forward.png\" width=\"350\" align=\"right\">\n",
+    "\n",
     "<br> \n",
     "\\begin{eqnarray*}\n",
     "a^{(1)} & = &x \\\\ \n",
@@ -270,7 +271,7 @@
     "\\delta^{(2)} & = & (W^{(2)})^T \\delta^{(3)} .* (a^{(2)} .* (1-a^{(2} ))\\\\ \n",
     "\\end{eqnarray*}\n",
     "<br>\n",
-    "<img src=\"http://jun.hansung.ac.kr/PR/images/backward.png\" width=\"350\">\n",
+    "<img src=\"./images/backward.png\" width=\"350\">\n",
     "<br>\n",
     "$$ {\\partial J(W) \\over \\partial w_{ij}^{(l)}  }= a_j^{(l)}\\delta_i^{(l+1)} $$\n",
     "$$ W_{ij}^{(l)} =  W_{ij}^{(l)} - \\alpha {\\partial J(W) \\over \\partial w_{ij}^{(l)} } $$"
