--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -282,7 +282,11 @@
    "metadata": {},
    "source": [
     "## (실습예제) 필기숫자인식\n",
-    "MNIST는 훈련 및 시험 세트를 모두 포함하는 필기숫자 이미지들로 유명한 데이터베이스입니다. 이는 기계학습의 정확성을 측정하는데 종종 사용되며, 쉽게 다운로드하여 사용할 수 있습니다. 다음의 python 코드는 단 몇 줄로 완성된 필기숫자이미지 인식 인공신경망 학습 및 시험용 프로그램입니다. "
+    "\n",
+    "기초적인 분류 문제(초보자용)\n",
+    "이 튜토리얼에서는 손으로 쓴 숫자를 인식하는 신경망 모델을 훈련합니다. 상세 내용을 모두 이해하지 못해도 괜찮습니다. 여기서는 완전한 텐서플로(TensorFlow) 2.0 프로그램을 빠르게 살펴 보겠습니다.\n",
+    "우선 텐서플로 모델을 만들고 훈련할 수 있는 고수준 API인 tf.keras를 사용합니다.\n",
+    "다음의 코드는 가장 핵심적인 내용 몇 줄 만으로 구성하여, 얼마나 간단하게 인공신경망 이 학습되고 시험될 수 있는지를 보여주는 프로그램입니다. "
    ]
   },
   {
