--- a/2. Linear Algebra - Review.ipynb
+++ b/2. Linear Algebra - Review.ipynb
@@ -704,12 +704,12 @@
     " \n",
     "where\n",
     "\n",
-    "$ c_{ij} =  < \\mathbf{a_{1*},b_{*1}} >  = \\sum_{k=1}^D a_{ik}b_{kj} $"
+    "$ c_{ij} =  < \\mathbf{a_{i*},b_{*j}} >  = \\sum_{k=1}^D a_{ik}b_{kj} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,18 @@
       " [2 2 2 2 2]\n",
       " [3 3 3 3 3]]\n",
       "[[ 6  6  6  6  6]\n",
-      " [12 12 12 12 12]]\n"
+      " [12 12 12 12 12]]\n",
+      "[[ 6 12]\n",
+      " [ 6 12]\n",
+      " [ 6 12]\n",
+      " [ 6 12]\n",
+      " [ 6 12]]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[[3. 0. 0.]\n",
+      " [0. 3. 0.]\n",
+      " [0. 0. 3.]]\n"
      ]
     }
    ],
@@ -732,8 +743,12 @@
     "B = np.array( [[1,1,1,1,1],[2,2,2,2,2],[3,3,3,3,3]] )\n",
     "print(A)\n",
     "print(B)\n",
-    "C = np.dot(A,B) # numpy에서 행렬곱셈은 dot()으로 수행한다.\n",
-    "print(C)"
+    "C = np.dot(A,B)  # numpy에서 행렬곱셈은 dot()으로 수행한다.\n",
+    "print(C)\n",
+    "print(C.T)       # numpy에서 전치 는 *.T  수행한다.\n",
+    "D = np.eye(3)    # 단위행렬(identity matrix)은  numpy.eye(#) 로 생성한다.\n",
+    "print(D)\n",
+    "print(3*D)"
    ]
   },
   {
@@ -752,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -761,14 +776,14 @@
      "text": [
       "[[1 2 3]\n",
       " [4 5 6]\n",
-      " [7 8 9]] 15\n"
+      " [7 8 9]] 15 15\n"
      ]
     }
    ],
    "source": [
     "A = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
     "A_tr = np.trace(A)   # 1 + 5 + 9\n",
-    "print(A, A_tr)"
+    "print(A, A_tr, np.trace(A.T))"
    ]
   },
   {
@@ -1129,9 +1144,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
     "# Vector operation\n",
-    "\n",
     "A = np.array([1, 2, 3, 4])\n",
     "A_norm = np.linalg.norm(A)\n",
     "print(\"norm of A = \", A_norm)\n",
@@ -1257,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
