--- a/6. Quadratic Classification.ipynb
+++ b/6. Quadratic Classification.ipynb
@@ -51,11 +51,11 @@
     "위의 식으로부터 MAP(Maximum A Posteriori: 최대사후확률) 판별함수는 다음과 같이 유도된다.\n",
     "\n",
     "$$ g_i(\\mathbf{x}) = P(\\omega_i | \\mathbf{x}) = { P(\\mathbf{x}|\\omega_i) P(\\omega_i) \\over P(\\mathbf{x}) }$$\n",
-    "$$= { 1 \\over (2\\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] {P(\\omega_i) \\over P(x)} $$\n",
+    "$$= { 1 \\over (2\\pi)^{D/2} | \\Sigma |^{1/2} } \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] {P(\\omega_i) \\over P(\\mathbf{x})} $$\n",
     "\n",
     "상수 항들($P(\\mathbf{x}), 2\\pi$)을 제거하고 다시 쓰면\n",
     "\n",
-    "$$ g_i(\\mathbf{x}) = | \\Sigma |^{1/2} \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] P(\\omega_i) $$\n",
+    "$$ g_i(\\mathbf{x}) = | \\Sigma |^{-1/2} \\exp \\left[-{1 \\over 2} (\\mathbf{x} -\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu}) \\right] P(\\omega_i) $$\n",
     "\n",
     "위 식에 단조증가함수인 자연로그를 취하면\n",
     "\n",
@@ -378,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
