--- a/6. Quadratic Classification.ipynb
+++ b/6. Quadratic Classification.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "## 이차분류기(Quadratic Discriminant)\n",
     "\n",
-    "분류 대상인 클래스의 분포가 가우시안 분포를 이룰 때, 클래스를 판별하는 판별식이 행렬의 이차(2-nd order) 형식으로 표현되기 때문에 붙여진 용어가 \"이차분류기\"이다.\n",
+    "분류 대상인 클래스의 분포가 **가우시안 분포**를 이룰 때, 클래스를 판별하는 **판별식이 분류대상 특징의 이차(2-nd order) 형식**으로 표현되기 때문에 붙여진 용어가 \"**이차분류기**\"이다.\n",
     "\n",
     "가우시안 분포의 공분산행렬의 종류에 따라 여러 형태가 존재\n",
     "\n",
