--- a/10. PCA (Principal Component Analysis).ipynb
+++ b/10. PCA (Principal Component Analysis).ipynb
@@ -366,6 +366,7 @@
    "metadata": {},
    "source": [
     "* **정방행렬**의 경우 ($A \\in R^{N\\times N}$)\n",
+    "\n",
     "  - $\\lambda$ 는 복소수(complex number)\n",
     "  - $\\lambda$ 는 $N$ 개\n",
     "  - $ AU = UA $\n",
@@ -374,6 +375,7 @@
     "  \n",
     "  \n",
     "* **대칭행렬**의 경우 ($A^T = A$)\n",
+    "\n",
     "  - $\\lambda$ 는 실수(real number)\n",
     "  - $U^T = U^{-1}$\n",
     "  - $A = U \\Lambda U^T $\n",
@@ -381,6 +383,7 @@
     "  \n",
     "  \n",
     "* **공분산행렬**의 경우 ($A = X^T X$)\n",
+    "\n",
     "  - $\\lambda_i \\ge 0$ 모든 고유값이 0 이거나 양수"
    ]
   },
@@ -510,7 +513,7 @@
     "<img src=\"./images/pca-ex5.png\" width=\"200\">\n",
     "(d) 주축 $u_2$으로의 사영하여 1차원으로 축소한 결과\n",
     "\n",
-    "<img src=\"./images/pca.gif\" width=\"500\">\n"
+    "<img src=\"./images/pca.gif\" width=\"500\">"
    ]
   },
   {
@@ -546,7 +549,7 @@
     "\n",
     "$$ \\mu= {1 \\over N} \\sum^N_{n=1}x_n , \\quad \\Sigma = { 1 \\over N} \\sum_{n=1}^N (x_n-\\mu)(x_n-\\mu)^T \\quad \\text{where N: No. of damples}$$\n",
     "\n",
-    "2. 고유값 분석을 행한다. (e.g. **[v, U] = numpy.linalg.eig(C)** )\n",
+    "2. 고유값 분석을 행한다. (e.g. **v, U = numpy.linalg.eig(C)** )\n",
     "\n",
     "$$ \\Sigma = U\\Lambda U^T = [ u_1 u_2 \\cdots u_D] \n",
     "\\begin{bmatrix} \\lambda_1 & 0 & 0  \\\\ 0 & \\ddots & 0 \\\\ 0 & 0 & \\lambda_D \\end{bmatrix}\n",
@@ -971,7 +974,7 @@
    "metadata": {},
    "source": [
     "[references]\n",
-    "* https://datascienceschool.net/view-notebook/7fd58178d9e64be682058db7e024d8b5/\n"
+    "* https://datascienceschool.net/02%20mathematics/03.05%20PCA.html\n"
    ]
   }
  ],
